--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -8,7 +9,7 @@
     <link rel="icon" href="http://yahoo.com/favicon.ico" type="image/png">
 
 
-    <link rel="stylesheet" href="/static/css/styles.min.css">
+    <link rel="stylesheet" href="{% static 'css/styles.min.css' %}">
   </head>
   <body>
     <!--================Header Menu Area =================-->
@@ -17,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container box_1620">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="http://localhost:8000/"><img src="/static/img/logo.png" alt=""></a>
+            <a class="navbar-brand logo_h" href="http://localhost:8000/"><img src="{% static 'img/logo.png' %}" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -197,6 +198,6 @@
     </footer>
     <!--================ End Footer Area =================-->
 
-    <script src="/static/js/scripts.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
