--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -66,7 +66,7 @@
             <div class="col-lg-8">
               <div class="main_blog_details">
                 <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
-                <h4>Cartridge Is Better Than Ever <br /> A Discount Toner</h4>
+                <h4>{{post.title}}</h4>
                 <div class="user_details">
                   <div class="mt-sm-0 mt-3">
                     <div class="media">
