--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -83,7 +83,7 @@
                 </div>
                 <p>{{post.text}}</p>
                 <div class="news_d_footer flex-column flex-sm-row">
-                  <a href="#"><span class="align-middle mr-2"><i class="ti-heart"></i></span>{{post.likes_amount}} people like this</a>
+                  <a href="#"><span class="align-middle mr-2"><i class="ti-heart" style="color:red"></i></span>{{post.likes_amount}} people like this</a>
                   <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#"><span class="align-middle mr-2"><i class="ti-themify-favicon"></i></span>{{ post.comments|length }} Comments</a>
                   <div class="news_socail ml-sm-auto mt-sm-0 mt-2">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -122,7 +122,7 @@
             <div class="col-lg-4 sidebar-widgets">
               <div class="widget-wrap">
                 <div class="single-sidebar-widget newsletter-widget">
-                  <h4 class="single-sidebar-widget__title">Newsletter</h4>
+                  <h4 class="single-sidebar-widget__title">News letter</h4>
                   <div class="form-group mt-30">
                     <div class="col-autos">
                       <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email" onfocus="this.placeholder = ''"
@@ -158,7 +158,7 @@
             </div>
             <div class="col-lg-4  col-md-6 col-sm-6">
               <div class="single-footer-widget">
-                <h6>Newsletter</h6>
+                <h6>News letter</h6>
                 <p>Stay update with our latest</p>
                 <div class="" id="mc_embed_signup">
   
