--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,6 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-  
             <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
               <ul class="nav navbar-nav menu_nav justify-content-center">
                 <li class="nav-item active"><a class="nav-link" href="http://localhost:8000/">Home</a></li>
@@ -44,40 +43,9 @@
       </div>
     </header>
 
-    <main class="site-main">
-      {% block section_banner %}
-      {% endblock %}
-
-      {% block section_slider %}
-      {% endblock %}
-      
-      <section class="blog-post-area section-margin mt-4">
-        <div class="container">
-          <div class="row">
-            {% block post_area %}
-            {% endblock %} 
-            <div class="col-lg-4 sidebar-widgets">
-              <div class="widget-wrap">
-                <div class="single-sidebar-widget newsletter-widget">
-                  <h4 class="single-sidebar-widget__title">NewsLetter</h4>
-                  <div class="form-group mt-30">
-                    <div class="col-autos">
-                      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email" onfocus="this.placeholder = ''"
-                          onblur="this.placeholder = 'Enter email'">
-                    </div>
-                  </div>
-                  <button class="bbtns d-block mt-20 w-100">Subcribe</button>
-                </div>
-                <div class="single-sidebar-widget post-category-widget">
-                  <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
+    {% block data_block %}
+    {% endblock %}
+    
     <footer class="footer-area section-padding">
       <div class="container">
         <div class="row">
