Fix top menu links on pages

--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -9,7 +9,7 @@
           <h1>Blog details</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="http://localhost:8000/">Home</a></li>
+              <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">Blog Details</li>
             </ol>
           </nav>
@@ -17,7 +17,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="blog-post-area section-margin mt-4">
     <div class="container">
       <div class="row">
