--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
       <div class="main_menu">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container box_1620">
-            <a class="navbar-brand logo_h" href="http://localhost:8000/"><img src="{% static 'img/logo.png' %}" alt=""></a>
+            <a class="navbar-brand logo_h" href="{% url 'index' %}"><img src="{% static 'img/logo.png' %}" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -28,8 +28,8 @@
             </button>
             <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
               <ul class="nav navbar-nav menu_nav justify-content-center">
-                <li class="nav-item active"><a class="nav-link" href="http://localhost:8000/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="http://localhost:8000/contact/">Contact</a></li>
+                <li class="nav-item active"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right navbar-social">
                 <li><a href="#"><i class="ti-facebook"></i></a></li>
