--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} {{ post.title }} - Blog Details {% endblock %}
+
 {% block data_block %}
   <section class="mb-30px">
     <div class="container">
