--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} Sensive Blog - Contact {% endblock %}
+
 {% block data_block %}
   <section class="mb-30px">
     <div class="container">
