--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} Sensive Blog - Home {% endblock %}
+
 {% block data_block %}
   <main class="site-main">
     <section class="mb-30px">
